# Zombies_Survival

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mixamo_guide.md
src/: CMakeCache.txt  Game.h  Makefile  cmake_install.cmake  main.cpp
src/audio/: AudioManager.h
src/core/: Mesh.h  Shader.h  Texture.h  Types.h  Window.h
src/entities/: Animation.h  Entity.h  Player.h  Zombie.h  ZombieManager.h
src/parallel/: MPIZoneManager.h  OpenMPManager.h
src/renderer/: Camera.h  HUD.h  ParticleSystem.h  Renderer.h  Skybox.h
src/weapons/: Pistol.h  Rifle.h  Shotgun.h  Weapon.h  WeaponManager.h
src/world/: CollisionSystem.h  DayNight.h  Map.h  WaveManager.h
